<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.StandingActivity">

    <LinearLayout
        android:id="@+id/header_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_name"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/played"
            android:layout_marginStart="50dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gd"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:layout_marginStart="25dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l"
            android:layout_marginStart="22dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pts"
            android:layout_marginStart="25dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_standing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_table"/>

    <ProgressBar
        android:id="@+id/prf_standing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>