<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/match_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/match_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/logo_home"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contentDescription="@string/home_logo"/>

            <TextView
                android:id="@+id/home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_home"
                android:layout_marginTop="10dp"
                android:text="@string/home_team"/>

            <TextView
                android:id="@+id/home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="70dp"
                android:layout_toEndOf="@+id/logo_home"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/score_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/home_score"
                android:text=":"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/away_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/score_dot"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/logo_away"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/away_logo"/>

            <TextView
                android:id="@+id/away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_away"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:text="@string/away_team"/>

        </RelativeLayout>

        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/match_detail"/>

        <ProgressBar
            android:id="@+id/prg_detail_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>