<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.PlayerDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/prg_layout_plyr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

            <LinearLayout
                android:id="@+id/layout_player_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                android:paddingVertical="30dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="100dp"
                    app:cardElevation="0dp"
                    android:layout_marginTop="30dp"
                    app:cardBackgroundColor="@android:color/white">

                    <ImageView
                        android:id="@+id/player_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_launcher_background"
                        android:contentDescription="@string/team_logo" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/player_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/aaron_ramsey"/>

                <TextView
                    android:id="@+id/team_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorAccentRed"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/player_positon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorAccent"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>
        </RelativeLayout>



        <TextView
            android:id="@+id/plyr_num_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:padding="7dp"
            android:text="@string/number"/>

        <ProgressBar
            android:id="@+id/prg_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/content_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/plyr_nat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:padding="7dp"
            android:text="@string/nationality"/>

        <ProgressBar
            android:id="@+id/prg_nat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/content_nat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="20dp"/>


        <TextView
            android:id="@+id/plyr_birth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:padding="7dp"
            android:text="@string/birthday"/>

        <ProgressBar
            android:id="@+id/prg_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/content_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/plyr_wage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:padding="7dp"
            android:text="@string/wage"/>

        <ProgressBar
            android:id="@+id/prg_wage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/content_wage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/plyr_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:padding="7dp"
            android:text="@string/description"/>

        <ProgressBar
            android:id="@+id/prg_desc_plyr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/content_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

</ScrollView>
