<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.TeamDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="false">

            <ProgressBar
                android:id="@+id/prg_team_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

           <LinearLayout
               android:id="@+id/layout_team_detail"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <androidx.cardview.widget.CardView
                   android:layout_width="150dp"
                   android:layout_height="150dp"
                   android:layout_gravity="center_horizontal"
                   app:cardCornerRadius="100dp"
                   app:cardElevation="0dp"
                   android:layout_marginTop="30dp"
                   app:cardBackgroundColor="@android:color/white">

                   <ImageView
                       android:id="@+id/team_logo"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:layout_gravity="center"
                       android:src="@drawable/ic_launcher_background"
                       android:contentDescription="@string/team_logo" />

               </androidx.cardview.widget.CardView>

               <TextView
                   android:id="@+id/team_name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="15dp"
                   android:background="@color/colorAccentRed"
                   android:paddingHorizontal="20dp"
                   android:textColor="@android:color/white"
                   android:text="@string/arsenal"
                   android:layout_marginBottom="30dp"/>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="20dp"
                   android:gravity="center_horizontal">

                   <ImageView
                       android:id="@+id/logo_yt"
                       android:layout_width="50dp"
                       android:layout_height="45dp"
                       android:layout_gravity="center"
                       android:padding="10dp"
                       android:background="@drawable/bg_rounded_white"
                       android:src="@drawable/youtube"
                       android:layout_marginEnd="20dp"
                       android:contentDescription="@string/youtube"/>

                   <ImageView
                       android:id="@+id/logo_twitter"
                       android:layout_width="50dp"
                       android:layout_height="45dp"
                       android:layout_gravity="center"
                       android:padding="10dp"
                       android:background="@drawable/bg_rounded_white"
                       android:src="@drawable/twitter"
                       android:layout_marginEnd="20dp"
                       android:contentDescription="@string/youtube"/>

                   <ImageView
                       android:id="@+id/logo_ig"
                       android:layout_width="50dp"
                       android:layout_height="45dp"
                       android:layout_gravity="center"
                       android:padding="10dp"
                       android:background="@drawable/bg_rounded_white"
                       android:src="@drawable/ig"
                       android:layout_marginEnd="20dp"
                       android:contentDescription="@string/youtube"/>

                   <ImageView
                       android:id="@+id/logo_fb"
                       android:layout_width="50dp"
                       android:layout_height="45dp"
                       android:layout_gravity="center"
                       android:padding="10dp"
                       android:background="@drawable/bg_rounded_white"
                       android:src="@drawable/facebook"
                       android:layout_marginEnd="20dp"
                       android:contentDescription="@string/youtube"/>

               </LinearLayout>

           </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@android:color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager_team"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>